update Test DeleteAccount

--- a/tests/report.html
+++ b/tests/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,10507],[],[[4,0,0,[],[0,2274,6054,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,169154],[],[[4,0,0,[],[1,2364,71074],[]],[5,0,0,[],[1,73439,95714],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Delete Account","*C:\\Users\\NITRO\\project\\Sec02_G04_SoftwareEngineering_PaiNamNaeWebApp\\tests\\delete_account.robot","*delete_account.robot","*ผู้ใช้ลบบัญชีได้หลัง Login","*Text 'การลบบัญชีผู้ใช้' did not appear in 5 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Delete Account","*C:\\Users\\NITRO\\project\\Sec02_G04_SoftwareEngineering_PaiNamNaeWebApp\\tests\\delete_account.robot","*delete_account.robot","*ลบบัญชีแบบไม่ขอสำเนาข้อมูล","*ลบบัญชีแบบขอรับสำเนาข้อมูล"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:11","fail":1,"id":"s1","label":"Delete Account","name":"Delete Account","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:02:47","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:02:49","fail":0,"id":"s1","label":"Delete Account","name":"Delete Account","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1771081114513;
+window.output["baseMillis"] = 1771239982742;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10522;
+window.output["generated"] = 169170;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
